KULRICE-4384 - merge 1.0.2.1 changes into 1.0.3